Show rewards on mobile

--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
                             </div>
                         </div>
                     </div>
+                    <div id="rewards" class="content-block visible-on-mobile">
+                        <h2>Rewards</h2>
+                        <hr />
+                        <a href="#" class="reward trim">
+                            <h4 class="reward__title">Pledge £100 or more</h4>
+                            <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
+                        </a>
+                        <a href="#" class="reward trim">
+                            <h4 class="reward__title">Pledge £200 or more</h4>
+                            <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
+                        </a>
+                        <a href="#" class="reward trim">
+                            <h4 class="reward__title">Pledge £300 or more</h4>
+                            <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
+                        </a>
+                    </div>
                     <div id="updates" class="tabs__content content-block">
                         <div class="visible-on-mobile">
                             <h2>Updates</h2>
