Added a no-results block

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                             <h2>Comments</h2>
                             <hr />
                         </div>
+                        <div class="no-results">
+                            There are currently no comments
+                        </div>
                     </div>
                     <div id="backers" class="tabs__content content-block">
                         <div class="visible-on-mobile">
