Increased updates heading size and created backer heading classes

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
                             <div class="media__body trim">
-                                <h4 class="no-margin">Matt Brailsford</h4>
-                                <p class="margin-small small">Pledged £100 3 days ago</p>
+                                <h4 class="backer__name">Matt Brailsford</h4>
+                                <p class="backer__meta">Pledged £100 3 days ago</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -136,8 +136,8 @@
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
                             <div class="media__body trim">
-                                <h4 class="no-margin">Matt Brailsford</h4>
-                                <p class="margin-small small">Pledged £100 3 days ago</p>
+                                <h4 class="backer__name">Matt Brailsford</h4>
+                                <p class="backer__meta">Pledged £100 3 days ago</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -146,8 +146,8 @@
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
                             <div class="media__body trim">
-                                <h4 class="no-margin">Matt Brailsford</h4>
-                                <p class="margin-small small">Pledged £100 3 days ago</p>
+                                <h4 class="backer__name">Matt Brailsford</h4>
+                                <p class="backer__meta">Pledged £100 3 days ago</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -156,8 +156,8 @@
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
                             <div class="media__body trim">
-                                <h4 class="no-margin">Matt Brailsford</h4>
-                                <p class="margin-small small">Pledged £100 3 days ago</p>
+                                <h4 class="backer__name">Matt Brailsford</h4>
+                                <p class="backer__meta">Pledged £100 3 days ago</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
