Added disabled reward styles

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>
                     <hr />
                     <h3>Rewards</h3>
-                    <a href="#" class="reward trim">
+                    <a href="#" class="reward trim" disabled>
                         <h4 class="reward__title">Pledge £100 or more</h4>
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
