--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         </div>
                     </div>
                 </fieldset>
-                <div class="form__buttons">
+                <div class="modal__buttons">
                     <button class="btn modal__cancel">Cancel</button>
                     <button class="btn btn--primary">Submit</button>
                 </div>
