--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                     <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="author__img" />
                                 </div>
                                 <div class="media__body">
-                                    <h4 class="author__title">Matt Brailsford</h4>
-                                    <p class="author__subtitle">Web Developer</p>
+                                    <h4 class="author__name">Matt Brailsford</h4>
+                                    <p class="author__description">Web Developer</p>
                                 </div>
                             </div>
                         </div>
@@ -77,15 +77,18 @@
                         <h2>Rewards</h2>
                         <hr />
                         <a href="#" class="reward trim" data-reward="RWD-100">
-                            <h4 class="reward__title">Pledge £100 or more</h4>
+                            <h4 class="reward__name">The bronze plan</h4>
+                            <p class="reward__amount">Pledge £100 or more</p>
                             <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                         </a>
                         <a href="#" class="reward trim" data-reward="RWD-200">
-                            <h4 class="reward__title">Pledge £200 or more</h4>
+                            <h4 class="reward__name">The silver plan</h4>
+                            <p class="reward__amount">Pledge £200 or more</p>
                             <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                         </a>
                         <a href="#" class="reward trim" data-reward="RWD-300">
-                            <h4 class="reward__title">Pledge £300 or more</h4>
+                            <h4 class="reward__name">The gold plan</h4>
+                            <p class="reward__amount">Pledge £300 or more</p>
                             <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                         </a>
                     </div>
@@ -198,13 +201,13 @@
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
                     <a href="#" class="reward trim"  data-reward="RWD-200">
-                            <h4 class="reward__name">The silver plan</h4>
-                            <p class="reward__amount">Pledge £200 or more</p>
+                        <h4 class="reward__name">The silver plan</h4>
+                        <p class="reward__amount">Pledge £200 or more</p>
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
                     <a href="#" class="reward trim"  data-reward="RWD-300">
-                            <h4 class="reward__name">The gold plan</h4>
-                            <p class="reward__amount">Pledge £300 or more</p>
+                        <h4 class="reward__name">The gold plan</h4>
+                        <p class="reward__amount">Pledge £300 or more</p>
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
                 </aside>
