Made checkbox into a slider switch

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <textarea></textarea>
                     </div>
                     <div class="form__field">
-                        <label><input type="checkbox" /> Remain Anonymous</label>
+                        <label><span class="switch"><input type="checkbox" /><span class="switch__slider"></span></span> Remain Anonymous</label>
                     </div>
                 </fieldset>
                 <fieldset>
