--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                         <hr />
                         <a href="#" class="reward trim" data-reward="RWD-100">
                             <h4 class="reward__name">The bronze plan</h4>
-                            <p class="reward__amount">Pledge £100 or more</p>
+                            <h6 class="reward__amount">Pledge £100 or more</h6>
                             <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                         </a>
                         <a href="#" class="reward trim" data-reward="RWD-200">
                             <h4 class="reward__name">The silver plan</h4>
-                            <p class="reward__amount">Pledge £200 or more</p>
+                            <h6 class="reward__amount">Pledge £200 or more</h6>
                             <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                         </a>
                         <a href="#" class="reward trim" data-reward="RWD-300">
                             <h4 class="reward__name">The gold plan</h4>
-                            <p class="reward__amount">Pledge £300 or more</p>
+                            <h6 class="reward__amount">Pledge £300 or more</h6>
                             <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                         </a>
                     </div>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="media__body trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
-                                <p class="backer__meta">Pledged £100 3 days ago</p>
+                                <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="media__body trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
-                                <p class="backer__meta">Pledged £100 3 days ago</p>
+                                <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                             </div>
                             <div class="media__body trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
-                                <p class="backer__meta">Pledged £100 3 days ago</p>
+                                <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                             </div>
                             <div class="media__body trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
-                                <p class="backer__meta">Pledged £100 3 days ago</p>
+                                <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
                             </div>
                         </div>
@@ -197,17 +197,17 @@
                     <h3>Rewards</h3>
                     <a href="#" class="reward trim"  data-reward="RWD-100" disabled>
                         <h4 class="reward__name">The bronze plan</h4>
-                        <p class="reward__amount">Pledge £100 or more</p>
+                        <h6 class="reward__amount">Pledge £100 or more</h6>
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
                     <a href="#" class="reward trim"  data-reward="RWD-200">
                         <h4 class="reward__name">The silver plan</h4>
-                        <p class="reward__amount">Pledge £200 or more</p>
+                        <h6 class="reward__amount">Pledge £200 or more</h6>
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
                     <a href="#" class="reward trim"  data-reward="RWD-300">
                         <h4 class="reward__name">The gold plan</h4>
-                        <p class="reward__amount">Pledge £300 or more</p>
+                        <h6 class="reward__amount">Pledge £300 or more</h6>
                         <p class="reward__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ornare aliquet nibh, vel laoreet ex pellentesque eget. Vivamus metus massa, pellentesque vitae ipsum sit amet, lobortis laoreet arcu.</p>
                     </a>
                 </aside>
