Added campaign list

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="body" role="main">
         <div class="container">
             <div class="masthead trim">
-                <h1 class="title">Campaign title</h1>
-                <h4 class="subtitle">Fundraising campaign by Matt Brailsford</h4>
+                <h1 class="heading">Campaign title</h1>
+                <h4 class="subheading">Fundraising campaign by Matt Brailsford</h4>
             </div>
             <ul class="tabs">
                 <li class="tabs__tab tabs__tab--active"><a href="#description">Description</a></li>
@@ -98,13 +98,13 @@
                             <hr />
                         </div>
                         <div class="update">
-                            <h3 class="update__title">Wow this campaign is rocking!</h3>
+                            <h3 class="update__heading">Wow this campaign is rocking!</h3>
                             <p class="update__meta">Update posted by Julie Read On Jan 24, 2018</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam elit erat, commodo sed porttitor et, venenatis quis velit. Nullam convallis mattis laoreet. Nulla faucibus fermentum eros ut pulvinar. Nullam eget est purus. Nulla lobortis tortor lorem, sed viverra erat facilisis sit amet. Nunc a massa quam. Nam orci turpis, hendrerit a porttitor vel, dictum nec dolor. Maecenas mollis, nibh eget mattis luctus, enim dui iaculis lacus, ut posuere ipsum tortor in ex. In et ultricies urna. Aenean ornare ultrices egestas.</p>
                             <p>Sed id nisl vehicula, auctor odio id, dapibus eros. Nunc non efficitur risus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur vel mattis felis, quis condimentum lorem. Proin vel orci sit amet lacus feugiat sodales eget in risus. Cras lorem turpis, venenatis consequat vulputate non, tristique vel nisl. Maecenas in massa sed odio dictum iaculis. Integer faucibus vitae felis sed luctus. Morbi venenatis erat sit amet metus scelerisque, sed bibendum lorem finibus. Suspendisse ornare eros purus, vitae iaculis tellus posuere in. Sed vitae varius magna. Maecenas ac nisl consequat, eleifend felis sit amet, congue ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
                         </div>
                         <div class="update">
-                            <h3 class="update__title">Wow this campaign is rocking!</h3>
+                            <h3 class="update__heading">Wow this campaign is rocking!</h3>
                             <p class="update__meta">Update posted by Julie Read On Jan 24, 2018</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam elit erat, commodo sed porttitor et, venenatis quis velit. Nullam convallis mattis laoreet. Nulla faucibus fermentum eros ut pulvinar. Nullam eget est purus. Nulla lobortis tortor lorem, sed viverra erat facilisis sit amet. Nunc a massa quam. Nam orci turpis, hendrerit a porttitor vel, dictum nec dolor. Maecenas mollis, nibh eget mattis luctus, enim dui iaculis lacus, ut posuere ipsum tortor in ex. In et ultricies urna. Aenean ornare ultrices egestas.</p>
                             <p>Sed id nisl vehicula, auctor odio id, dapibus eros. Nunc non efficitur risus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur vel mattis felis, quis condimentum lorem. Proin vel orci sit amet lacus feugiat sodales eget in risus. Cras lorem turpis, venenatis consequat vulputate non, tristique vel nisl. Maecenas in massa sed odio dictum iaculis. Integer faucibus vitae felis sed luctus. Morbi venenatis erat sit amet metus scelerisque, sed bibendum lorem finibus. Suspendisse ornare eros purus, vitae iaculis tellus posuere in. Sed vitae varius magna. Maecenas ac nisl consequat, eleifend felis sit amet, congue ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
@@ -225,7 +225,7 @@
                 <fieldset>
                     <h3>Personal Details</h3>
                     <hr />
-                    <div class="columns columns--collapse">
+                    <div class="columns columns--x1 columns--x2-md">
                         <div class="column">
                             <div class="form__field">
                                 <label for="name">Name</label>
@@ -263,13 +263,13 @@
                 <fieldset>
                     <h3>Billing Details</h3>
                     <hr />
-                    <div class="columns columns--collapse">
+                    <div class="columns columns--x1 columns--x2-md">
                         <div class="column">
                             <div class="form__field">
                                 <label for="name">Card Number</label>
                                 <input type="text" />
                             </div>
-                            <div class="columns">
+                            <div class="columns  columns--x2">
                                 <div class="column">
                                     <div class="form__field">
                                         <label for="name">Expiry Date</label>
