Added side padding back in

--- a/list.html
+++ b/list.html
@@ -21,10 +21,15 @@
     <div class="body" role="main">
         <div class="container">
             <div class="masthead trim">
-                <h1 class="heading">Campaign title</h1>
-                <h4 class="subheading">Fundraising campaign by Matt Brailsford</h4>
+                <h1 class="heading">Discover</h1>
+                <h4 class="subheading">Crowdfunding Projects by Outfield Digital</h4>
             </div>
-            <div class="columns columns--x1 columns--x2-md columns--x3-lg summary__list">
+            <h3>Active</h3>
+            <hr />
+            <div class="no-results">No active campaigns</div>
+            <h3>Ended</h3>
+            <hr />
+            <div class="summary__list columns columns--x1 columns--x2-md columns--x3-lg">
                 <div class="column">
                     <a href="index.html" class="summary trim">
                         <span class="summary__img">
