--- a/index.html
+++ b/index.html
@@ -218,9 +218,10 @@
         <div class="container">
             <div class="columns columns--x1 columns--x3-md">
                 <div class="column">
-                    <h3>About</h3>
+                    <h3>Links</h3>
                     <nav>
                         <ul>
+                            <li><a href="text.html">Campaigns</a></li>
                             <li><a href="text.html">About Us</a></li>
                             <li><a href="text.html">Contact Us</a></li>
                         </ul>
